--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>My First Project In Web Development</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate est assumenda eveniet sint dolore distinctio et pariatur. Dolorum consequatur dicta dolores officiis hic quaerat nihil adipisci voluptatibus, voluptatem consequuntur.</p>
+    <button href="#">Read more</button>
 </body>
 </html>
