--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>My First Project In Web Development</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate est assumenda eveniet sint dolore distinctio et pariatur. Dolorum consequatur dicta dolores officiis hic quaerat nihil adipisci voluptatibus, voluptatem consequuntur.</p>
-    <button href="#">Read more</button>
+    <div id="card">
+        <h1>My First Project In Web Development</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate est assumenda eveniet sint dolore distinctio et pariatur. Dolorum consequatur dicta dolores officiis hic quaerat nihil adipisci voluptatibus, voluptatem consequuntur.</p>
+        <button href="#">Read more</button>
+    </div>
+    
 </body>
 </html>
